chat relooking and clippy

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sapcai": "^4.1.0"
   },
   "devDependencies": {}
 }
